feat: apportate modifiche alle varie classi per migliorare l'integrazione tra le varie parti