@@ -2,7 +2,6 @@ package strategy;
 
 import model.*;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import model.StatoVisione;
 
@@ -16,8 +15,7 @@ public class FiltroStatoStrategy implements FilmQueryStrategy{
     @Override
     public List<FilmIF> eseguiQuery(List<FilmIF> lista){
         return lista.stream()
-                .filter(f -> f.getStatoVisione()==stato)
-                .collect(Collectors.toList());
+                .filter(f -> f.getStatoVisione()==stato).toList();
     }
 
 }
