@@ -2,7 +2,6 @@ package strategy;
 
 import model.*;
 import java.util.List;
-import java.util.stream.Collectors;
 
 public class RicercaRegistaStrategy implements FilmQueryStrategy{
     private final String regista;
@@ -14,8 +13,8 @@ public class RicercaRegistaStrategy implements FilmQueryStrategy{
     @Override
     public List<FilmIF> eseguiQuery(List<FilmIF> lista){
         return lista.stream()
-                .filter(f -> f.getRegista().toLowerCase().contains(regista))
-                .collect(Collectors.toList());
+                .filter(f -> f.getRegista().toLowerCase().contains(regista.toLowerCase()))
+               .toList();
     }
 
 }
